# test

./: .coverage  .env.example  .gitignore  README.md  pyproject.toml  pytest_output.txt  pytest_output2.txt  requirements.txt  run.py
.integrow/reviews/: review_session_v4_2026-03-31_10-17-36.md
.integrow/user-stories/: REQ-b138efa4-a03f-4e3b-a934-9b2493cd7b9a.md
app/: exceptions.py  main.py
app/api/v1/: api.py
app/api/v1/endpoints/: category_router.py  error_router.py  inventory_router.py  item_router.py  system_router.py  user_router.py
app/core/: config.py  database.py
app/models/: category.py  error.py  inventory.py  item.py  system.py  user.py
app/services/: category_service.py  error_service.py  inventory_service.py  item_service.py  system_service.py  user_service.py
docs/uml/: REQ-b138efa4_unknown_class_diagram.puml
src/api/: category_router.py  error_router.py  inventory_router.py  item_router.py  system_router.py  user_router.py
src/models/: category.py  error.py  inventory.py  item.py  system.py  user.py
src/services/: category_service.py  error_service.py  inventory_service.py  item_service.py  system_service.py  user_service.py
tests/: conftest.py
tests/api/: test_category_router.py  test_error_router.py  test_inventory_router.py  test_item_router.py  test_user_router.py
tests/models/: test_category.py  test_error.py  test_inventory.py  test_item.py  test_system.py  test_user.py
tests/services/: test_category_service.py  test_error_service.py  test_inventory_service.py  test_item_service.py  test_system_service.py
